--- a/src/pug/includes/card-portfolio.pug
+++ b/src/pug/includes/card-portfolio.pug
@@ -1,7 +1,7 @@
 li.card-portfolio
   .container.card-portfolio__container
     .card-portfolio__col 
-      h3.card-portfolio__title Каркасный дом по индивидуальному проекту
+      h3.card-portfolio__title Проект 212
       p.card-portfolio__text Равным образом рамки и место обучения кадров позволяет выполнять важные задания по разработке позиций, занимаемых участниками в отношении поставленных задач
       ul.card-portfolio__grid.card-portfolio-grid 
         li.card-portfolio-grid__item
@@ -37,7 +37,7 @@ li.card-portfolio
             span.card-portfolio-grid__title Материалы
             span.card-portfolio-grid__value Кирпич, панель
       .card-portfolio__btns
-        a.card-portfolio__btn.secondary-btn(href="#") Смотреть подробнее
+        a.card-portfolio__btn.secondary-btn(href="#") Подробнее
         a.card-portfolio__btn.primary-btn(href="#") Полное портфолио
     .card-portfolio__col.card-portfolio-slider.photo__slider.swiper-container
       ul.card-portfolio-slider__wrapper.swiper-wrapper
