--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -1,5 +1,11 @@
 header.header 
   .header__container.container 
+    button.header__burger 
+      <svg width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect width="24" height="2" rx="1" fill="var(--neutral-1)"/>
+        <rect y="8" width="24" height="2" rx="1" fill="var(--neutral-1)"/>
+        <rect y="16" width="24" height="2" rx="1" fill="var(--neutral-1)"/>
+      </svg>
     a.header__logo(href="#")
       <svg width="95" height="28" viewBox="0 0 95 28" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M9.13478 22.7733V19.7156C9.13478 18.9351 9.77217 18.3023 10.5584 18.3023H13.4326C13.8102 18.3023 14.1723 18.4512 14.4393 18.7163C14.7063 18.9813 14.8563 19.3408 14.8563 19.7156V22.7733C14.8539 23.0978 14.9821 23.4099 15.2124 23.6402C15.4427 23.8705 15.7561 24 16.0829 24H18.0438C18.9596 24.0023 19.8388 23.6428 20.4872 23.0008C21.1356 22.3588 21.5 21.487 21.5 20.5778V11.8669C21.5 11.1325 21.1721 10.4358 20.6046 9.96467L13.934 4.67587C12.7737 3.74856 11.1111 3.7785 9.98539 4.74698L3.46701 9.96467C2.87274 10.422 2.51755 11.1206 2.5 11.8669V20.5689C2.5 22.4639 4.04738 24 5.95617 24H7.87229C8.55123 24 9.103 23.4562 9.10792 22.7822L9.13478 22.7733Z" fill="var(--neutral-1)"/>
