--- a/src/pug/pages/completed-project-page.pug
+++ b/src/pug/pages/completed-project-page.pug
@@ -72,7 +72,7 @@ block content
             h3.project-info__title Характеристики
             .project-info__row
               span Материалы
-              span Каркас, кирпич
+              span Кирпич
             .project-info__row
               span Площадь
               span 89.50 м²
