--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -30,6 +30,7 @@ block content
     td a{
       display: block;
       padding: 20px;
+      color: var(--neutral-1)!important;
     }
     @media screen and (max-width: 767px) {
       tr,
@@ -64,3 +65,30 @@ block content
             a(href="completed-projects.html" target="_blank") Построенные проекты
           td 
             a(href="completed-project-page.html" target="_blank") Страница построенного проекта
+        tr
+          td 
+            a(href="services.html" target="_blank") Услуги
+        tr
+          td 
+            a(href="contacts.html" target="_blank") Контакты
+        tr
+          td 
+            a(href="about.html" target="_blank") О компании
+        tr
+          td 
+            a(href="information.html" target="_blank") Информация
+        tr
+          td 
+            a(href="questions.html" target="_blank") Вопросы и ответы
+        tr
+          td 
+            a(href="guarantee.html" target="_blank") Гарантия на строительство
+        tr
+          td 
+            a(href="materials.html" target="_blank") Из чего мы строим?
+        tr
+          td 
+            a(href="text.html" target="_blank") Текстовая страница
+        tr
+          td 
+            a(href="404.html" target="_blank") 404
