--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -9,7 +9,7 @@ block content
     .banner__container.container 
       .banner__content 
         h1.banner__title Готовые дома за 2&nbsp;месяца 
-          span «под ключ»
+          span «под&nbsp;ключ»
         p.banner__text Было всего без четверти десять, когда мы вернулись в общежитие броссар обожал бридж и пошел
         .banner__btns
           a.banner__btn.secondary-btn(href="#") Выбрать проект
