--- a/src/pug/pages/project-page.pug
+++ b/src/pug/pages/project-page.pug
@@ -67,12 +67,12 @@ block content
         .project__info.project-info
           .project-info__wrap
             h3.project-info__title Описание
-            p.project-info__descr Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности требуют определения и уточнения направлений прогрессивного развития. Не следует, однако забывать, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу участие формировании позиций, занимаемых в отношении поставленных ранее нами задач поставленных ранее нами задач.
+            p.project-info__descr Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности требуют определения и уточнения направлений прогрессивного развития. Не следует, однако забывать, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу участие формировании позиций, занимаемых в отношении поставленных ранее нами задач.
           .project-info__wrap
             h3.project-info__title Характеристики
             .project-info__row
               span Материалы
-              span Каркас, кирпич
+              span Кирпич
             .project-info__row
               span Площадь
               span 89.50 м²
