--- a/src/pug/pages/projects.pug
+++ b/src/pug/pages/projects.pug
@@ -28,6 +28,11 @@ block content
               input.visually-hidden(type="radio" name="sort")
               span Сначала дорогие
             button.projects-filters-content__accept.primary-btn Применить
+        li.projects-filters__item.projects-filters__item--filters
+          button.projects-filters__btn Фильтр
+            <svg width="17" height="19" viewBox="0 0 17 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M16 6L7.5 6M7.5 6C7.5 4.89543 6.60457 4 5.5 4C4.39543 4 3.5 4.89543 3.5 6M7.5 6C7.5 7.10457 6.60457 8 5.5 8C4.39543 8 3.5 7.10457 3.5 6M3.5 6L1 6M16 14L13.5 14M13.5 14C13.5 12.8954 12.6046 12 11.5 12C10.3954 12 9.5 12.8954 9.5 14M13.5 14C13.5 15.1046 12.6046 16 11.5 16C10.3954 16 9.5 15.1046 9.5 14M9.5 14H1" stroke="#6F49FF"/>
+            </svg>
         li.projects-filters__item.select(select--active) 
           button.projects-filters__btn.select-open(filters-count="1") Материал
           .projects-filters__content.select-content 
@@ -46,7 +51,7 @@ block content
         li.projects-filters__item.select(select--active) 
           button.projects-filters__btn.select-open Цена (руб)
           .projects-filters__content.select-content
-      button.projects__clear Очистить фильтр
+      button.projects__clear(projects__clear--active) Очистить фильтр
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M5.5 6.5L17.5 18.5M5.5 18.5L17.5 6.5" stroke="#151515" stroke-opacity="0.4"/>
         </svg>
@@ -69,22 +74,8 @@ block content
           include ../includes/card-project.pug
         li.projects__item
           include ../includes/card-project.pug
-        li.projects__item
-          include ../includes/card-project.pug
-        li.projects__item
-          include ../includes/card-project.pug
-        li.projects__item
-          include ../includes/card-project.pug
-        li.projects__item
-          include ../includes/card-project.pug
-        li.projects__item
-          include ../includes/card-project.pug
-        li.projects__item
-          include ../includes/card-project.pug
-        li.projects__item
-          include ../includes/card-project.pug
 
-    .container
+    .container.projects-pagination__wrap
       ul.projects__pagination.projects-pagination
         li.projects-pagination__item 
           .projects-pagination__link.projects-pagination__link--arr
