--- a/src/styles/blocks/common/card-project.scss
+++ b/src/styles/blocks/common/card-project.scss
@@ -3,9 +3,18 @@
   flex-direction: column;
   height: 100%;
   padding: 40px;
+  @include w1023 {
+    padding: 34px 22px 22px;
+  }
+  @include w767 {
+    padding: 22px 22px 23px;
+  }
   &__slider {
     width: 100%;
     margin-bottom: 40px;
+    @include w1023 {
+      margin-bottom: 30px;
+    }
   }
   &-slider {
     &__wrapper {
@@ -18,6 +27,12 @@
     height: 277px;
     border-radius: 6px;
     object-fit: cover;
+    @include w1023 {
+      height: 230px;
+    }
+    @include w767 {
+      height: 206px;
+    }
   }
   &__title {
     margin-top: 0;
@@ -27,6 +42,11 @@
     font-size: 24px;
     line-height: 28px;
     letter-spacing: 0.01em;
+    @include w1023 {
+      margin-bottom: 8px;
+      font-size: 20px;
+      line-height: 23px;
+    }
   }
   &__text {
     margin-bottom: 30px;
@@ -34,6 +54,12 @@
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    @include w1023 {
+      margin-bottom: 22px;
+      -webkit-line-clamp: 4;
+      font-size: 16px;
+      line-height: 22px;
+    }
   }
   &__row {
     display: flex;
@@ -42,9 +68,15 @@
     }
     & + & {
       margin-top: 14px;
+      @include w1023 {
+        margin-top: 12px;
+      }
     }
     & + .card-project__btn {
       margin-top: 40px;
+      @include w1023 {
+        margin-top: 30px;
+      }
     }
     span {
       font-size: 14px;
@@ -61,8 +93,14 @@
   &__btn {
     width: 100%;
     padding: 14px 0;
+    @include w1023 {
+      padding: 10px 0;
+    }
     & + & {
       margin-top: 14px;
+      @include w1023 {
+        margin-top: 12px;
+      }
     }
   }
 }
