--- a/src/styles/blocks/common/footer.scss
+++ b/src/styles/blocks/common/footer.scss
@@ -2,12 +2,29 @@
   border-top: 1px solid var(--neutral-10);
   &__container {
     display: flex;
+    @include w1200 {
+      display: block;
+    }
   }
   &__col {
     padding-top: 40px;
+    @include w1200 {
+      padding-top: 20px;
+    }
+    @include w767 {
+      padding-top: 23px;
+    }
     &:first-child {
       flex: 1;
       border-right: 1px solid var(--neutral-10);
+      @include w1200 {
+        position: relative;
+        padding-top: 26px;
+        border-right: none;
+      }
+      @include w767 {
+        padding-top: 22px;
+      }
     }
   }
   &__info {
@@ -19,8 +36,36 @@
     margin-top: 40px;
     padding: 40px;
     border-top: 1px solid var(--neutral-10);
+    @include w1200 {
+      transform: translateX(-22px);
+      flex-direction: row;
+      justify-content: space-between;
+      width: calc(100% + 44px);
+      margin-top: 26px;
+      padding: 20px 22px;
+      border-bottom: 1px solid var(--neutral-10);
+    }
+    @include w767 {
+      flex-direction: column;
+      margin-top: 22px;
+      padding: 22px;
+    }
     .footer__link {
       margin-bottom: 14px;
+      @include w1200 {
+        margin-bottom: 0;
+      }
+      @include w767 {
+        margin-bottom: 20px;
+      }
+      &:first-child {
+        @include w1200 {
+          order: 1;
+        }
+        @include w767 {
+          order: initial;
+        }
+      }
     }
   }
   &__socials {
@@ -28,11 +73,23 @@
     margin-top: 8px;
     padding-left: 0;
     list-style: none;
+    @include w1200 {
+      position: absolute;
+      top: -60px;
+      right: 22px;
+      margin-top: 0;
+    }
+    @include w767 {
+      position: static;
+    }
   }
   &-socials {
     &__item {
       &:not(:last-child) {
         margin-right: 14px;
+        @include w1023 {
+          margin-right: 12px;
+        }
       }
     }
     &__link {
@@ -44,6 +101,10 @@
       background-color: var(--violet-blue-light-light);
       border-radius: 6px;
       transition: background-color 0.2s;
+      @include w1023 {
+        width: 36px;
+        height: 36px;
+      }
       @include hover {
         &:hover,
         &:focus {
@@ -81,6 +142,16 @@
     grid-template-columns: repeat(4, auto);
     grid-gap: 67px;
     padding-left: 40px;
+    @include w1200 {
+      padding-left: 0;
+    }
+    @include w1023 {
+      grid-gap: 44px;
+    }
+    @include w767 {
+      grid-template-columns: repeat(2, auto);
+      grid-gap: 40px 20px;
+    }
   }
   &-list {
     &__col {
@@ -91,6 +162,11 @@
     &__title {
       margin-bottom: 20px;
       transition: color 0.2s;
+      @include w767 {
+        margin-bottom: 16px;
+        font-size: 13px;
+        line-height: 19px;
+      }
       @include hover {
         &:hover,
         &:focus {
@@ -106,6 +182,10 @@
     &__link {
       color: var(--neutral-6);
       transition: color 0.2s;
+      @include w767 {
+        font-size: 13px;
+        line-height: 19px;
+      }
       @include hover {
         &:hover,
         &:focus {
@@ -119,6 +199,9 @@
       }
       &:not(:last-child) {
         margin-bottom: 14px;
+        @include w767 {
+          margin-bottom: 12px;
+        }
       }
     }
   }
@@ -128,9 +211,32 @@
     margin-top: 40px;
     padding: 30px 0 30px 40px;
     border-top: 1px solid var(--neutral-10);
+    @include w1200 {
+      transform: translateX(-22px);
+      justify-content: space-between;
+      width: calc(100% + 44px);
+      padding: 20px 22px;
+    }
+    @include w767 {
+      flex-direction: column;
+    }
+    @include w767 {
+      padding: 22px;
+    }
     > * {
       &:not(:last-child) {
         margin-right: 40px;
+        @include w767 {
+          margin-right: 0;
+          margin-bottom: 20px;
+        }
+      }
+      &:first-child {
+        @include w767 {
+          order: 1;
+          margin-top: 20px;
+          margin-bottom: 0;
+        }
       }
     }
   }
