--- a/src/styles/blocks/mainpage/payment.scss
+++ b/src/styles/blocks/mainpage/payment.scss
@@ -3,11 +3,29 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 0;
+    @include w767 {
+      grid-template-columns: auto;
+    }
   }
   &__item {
     position: relative;
     display: flex;
     padding: 40px;
+    @include w1200 {
+      display: block;
+    }
+    @include w1023 {
+      padding: 22px;
+    }
+    &:not(:last-child) {
+      @include w1023 {
+        border-right: 1px solid var(--neutral-10);
+      }
+      @include w767 {
+        border-right: none;
+        border-bottom: 1px solid var(--neutral-10);
+      }
+    }
   }
   &-item {
     &__icon {
@@ -21,16 +39,34 @@
       height: 38px;
       border-radius: 6px;
       background-color: var(--neutral-14);
+      @include w1023 {
+        top: 34px;
+        left: 34px;
+        width: 36px;
+        height: 36px;
+      }
     }
     &__picture {
       flex: 0 0 184px;
       margin-right: 40px;
+      @include w1023 {
+        flex: auto;
+        margin-right: 0;
+        display: block;
+        margin-bottom: 30px;
+      }
     }
     &__img {
       width: 100%;
       height: 140px;
       object-fit: cover;
       border-radius: 6px;
+      @include w1200 {
+        height: 227px;
+      }
+      @include w767 {
+        height: 203px;
+      }
     }
     &__title {
       margin-top: 0;
@@ -40,6 +76,11 @@
       font-size: 28px;
       line-height: 33px;
       letter-spacing: 0.01em;
+      @include w1023 {
+        margin-bottom: 10px;
+        font-size: 20px;
+        line-height: 23px;
+      }
     }
   }
 }
