--- a/src/styles/blocks/mainpage/stages.scss
+++ b/src/styles/blocks/mainpage/stages.scss
@@ -3,6 +3,9 @@
   &__container {
     display: flex;
     padding: 0;
+    @include w767 {
+      flex-direction: column-reverse;
+    }
   }
   &__list {
     display: grid;
@@ -11,11 +14,20 @@
     flex: 1;
     padding-left: 0;
     list-style: none;
+    @include w1200 {
+      grid-template-columns: auto;
+    }
   }
   &__item {
     display: flex;
     align-items: center;
     padding: 40px;
+    @include w1200 {
+      padding: 22px;
+    }
+    &:not(:last-child) {
+      border-bottom: 1px solid var(--neutral-10);
+    }
   }
   &-item {
     &__icon {
@@ -25,6 +37,10 @@
       padding: 9px 9px 9px 51px;
       background: var(--violet-blue-light-light);
       border-radius: 6px;
+      @include w1023 {
+        margin-right: 12px;
+        padding: 6px 6px 6px 43px;
+      }
       &:before {
         position: absolute;
         left: 15px;
@@ -34,6 +50,9 @@
         font-size: 18px;
         line-height: 24px;
         color: var(--violet-blue);
+        @include w1023 {
+          left: 12px;
+        }
       }
       &:after {
         content: '';
@@ -49,16 +68,35 @@
     &__title {
       font-size: 20px;
       line-height: 24px;
+      @include w1023 {
+        font-size: 16px;
+        line-height: 22px;
+      }
     }
   }
   &__picture {
     padding: 40px;
     border-left: 1px solid var(--neutral-10);
+    @include w1023 {
+      padding: 22px;
+    }
+    @include w767 {
+      border-left: none;
+      border-bottom: 1px solid var(--neutral-10);
+    }
   }
   &__img {
     width: 358px;
     height: 288px;
     border-radius: 6px;
     object-fit: cover;
+    @include w1023 {
+      width: 299px;
+      height: 100%;
+    }
+    @include w767 {
+      width: 100%;
+      height: 214px;
+    }
   }
 }
